--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
-  "name": "@mewo.js/core",
+  "name": "@mewo-js/core",
+  "description": "Core of Mewo.js",
   "module": "src/mewo.js",
-  "type": "module"
+  "version": "0.0.1",
+  "contributors": [
+    "Ján Gajdoš <gajdos.jan77@gmail.com>"
+  ],
+  "type": "module",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Mewo-js/core.git"
+  },
+  "keywords": [
+    "framework",
+    "web"
+  ]
 }
